Admin page. (create channel module for admin page.) Login page.

--- a/backbone-spa-ui/app/admin-app/index.html
+++ b/backbone-spa-ui/app/admin-app/index.html
@@ -8,6 +8,8 @@
 
     <!-- Temporary solution: include file -->
     <link href="/static/css/sb-admin.css" rel="stylesheet">
+    <link href="/static/css/form-elements.css" rel="stylesheet">
+    <link href="/static/css/login.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/res.css">
     
 </head>
